fix:multi bugs